properties de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=caso1
-sonar.projectName=caso1
+sonar.projectKey=caso1online
+sonar.projectName=caso1online
 sonar.projectVersion=1.0
 
 sonar.sources=src/codigo/.
@@ -12,9 +12,9 @@ sonar.host.url=http://sonarcloud.io
 
 sonar.scm.exclusions.disabled=true
 
-sonar.organization=imaguilacano
+sonar.organization=frangar1998
 
-sonar.login=96c7715058aeafc6c7cbb66051665a4a29ed2fa7
+sonar.login=79acf2b7f20d3c6bb91bc000fead5c3057e2e344
 
 
 sonar.sourceEncoding=UTF-8
